# TinyGameServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
server/: DataServer.cpp  GateServer.cpp
src/: main.cpp  test.cpp
src/DataServer/: CMakeLists.txt  DBManager.cpp  DBManager.h  PGManager.cpp  PGManager.h  RedisManager.cpp  RedisManager.h  main.cpp
src/GateServer/: CMakeLists.txt  main.cpp
src/data/: PGManager.cpp  PGManager.h  RedisManager.cpp  RedisManager.h  init.sql
src/db/: DBManager.cpp  DBManager.h  PGManager.cpp  PGManager.h  RedisManager.cpp  RedisManager.h
src/include/: Base.h  EventLoop.h  Log.h  Network.h  common.h  network.h
src/log/: Log.cpp
src/loginserver/: main.cpp
src/network/: EventLoop.cpp  IAcceptor.h  IConnection.h  IConnector.h  Network.cpp  TCPAcceptor.cpp  TCPAcceptor.h  TCPClient.cpp  TCPClient.h  TCPConnection.cpp  TCPConnection.h  TCPConnector.cpp  TCPConnector.h  TCPServer.cpp  TCPServer.h  inner.h  network.cpp  tcp.cpp
src/util/: Buffer.cpp  Buffer.h  EventChannel.cpp  EventChannel.h  FdWatcher.cpp  FdWatcher.h  InnerProtocol.cpp  InnerProtocol.h  Log.cpp  OuterProtocol.cpp  OuterProtocol.h  ThreadManager.cpp  ThreadManager.h  UID.h  WorkThread.cpp  WorkThread.h
